Title: Correction
Version: 6.575
<changes>
Fixed https://github.com/VolmitSoftware/React/issues/450 a small few confusing typos in react's Config, and Placeholder File.

</changes>
Proofreading to Perfection!
@NextdoorPsycho